# MyCmakeTemplate

./: CMakeLists.txt  fresh_make.sh  make.sh  quick_make.sh  run.sh
src/: main.cpp
